Fixing position of aff new book form on mobile devices

--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ footer{
         z-index: 2;
         position: fixed;
         top: 0%;
-        left:22%;
+        left:26%;
         border: 1px solid black;
         background-color: azure;
     }
